# VoIPCore

./: .gitignore  CMakeLists.txt  Error.cpp  Error.hpp  README.md  conan-config.sh  conanfile.txt  purge.sh
Audio/: Audio.cpp  Audio.hpp  AudioManager.cpp  AudioManager.hpp  Codec.cpp  Codec.hpp
Database/: Data.cpp  Data.hpp
Documentation/html/: _abstract_tcp_socket_8cpp.html  _abstract_tcp_socket_8hpp.html  _abstract_tcp_socket_8hpp_source.html  _audio_8cpp.html  _audio_8hpp.html  _audio_8hpp_source.html  _audio_manager_8cpp.html  _audio_manager_8hpp.html  _audio_manager_8hpp_source.html  _c_make_lists_8txt.html  _codec_8cpp.html  _codec_8hpp.html  _codec_8hpp_source.html  _connection_8cpp.html  _connection_8hpp.html  _connection_8hpp_source.html  _data_8cpp.html  _data_8hpp.html  _data_8hpp_source.html  _data_package_8cpp.html  _data_package_8hpp.html  _data_package_8hpp_source.html  _error_8cpp.html  _error_8hpp.html  _error_8hpp_source.html  _login_page_8cpp.html  _login_page_8hpp.html  _login_page_8hpp_source.html  _server_8cpp.html  _server_8hpp.html  _server_8hpp_source.html  _tcp_socket_8cpp.html  _tcp_socket_8hpp.html  _tcp_socket_8hpp_source.html  _user_inter_8cpp.html  _user_inter_8hpp.html  _user_inter_8hpp_source.html  annotated.html  chat__client_8hpp_source.html  class_abstract_tcp_socket-members.html  (+53 more)
Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  (+26 more)
Documentation/latex/: annotated.tex  class_chat_client.tex  class_handle_chat.tex  class_handle_connection.tex  classprotocole.tex  refman.tex
client/: AbstractTcpSocket.cpp  AbstractTcpSocket.hpp  DataPackage.cpp  DataPackage.hpp  TcpSocket.cpp  TcpSocket.hpp  main.cpp
client/Interface/: LoginPage.cpp  LoginPage.hpp  UserInter.cpp  UserInter.hpp
server/: Connection.cpp  Connection.hpp  Server.cpp  Server.hpp  main.cpp
